# lasercrabs

./: .exrc  .exrc.in  .gitattributes  .gitignore  .gitmodules  .includes.in  .itch-linux.toml  .itch-mac.toml  .itch-win.toml  .itch.toml  .ycm_extra_conf.py  CMakeLists.txt  Info.plist  README.md  build-linux  build-mac  build-win.bat  config.txt  icon.icns  itch-mac  itch-win.bat  itch.bat  language.txt  main.cpp  run-mac-linux  setup  setup-debian-deps  setup-linux  setup-mac  setup-win.bat  setup.bat  shipme.txt
assets/: Alpha.fbx  Alpha_headless.blend  Armature.glsl  Standard.glsl  UI.glsl  actor_collision.blend  air_wave.blend  armature.glsl  asteroid.blend  audio_log.blend  awk.blend  battery.blend  blend_to_fbx.py  blend_to_lvl.py  bloom_downsample.glsl  blur.glsl  buffer_debug.glsl  cart.blend  character.blend  character_headless.blend  cigarette.blend  city1.blend  city2.blend  city3.blend  city3.blend1  city3.fbx  city3.mdl  city4.blend  clouds.blend  compass.blend  composite.glsl  cone.blend  containment_field.blend  control_point.blend  core.blend  core_module.blend  cube.blend  cylinder.blend  cylinder_inside.blend  dada.blend  (+139 more)
assets/audio/: audio.wproj
assets/dl/: In Medias Res.dl  In Medias Res.dlz  Ioke.dl  Ioke.dlz  Medias Res.dl  Medias Res.dlz  Moros.dl  Moros.dlz  Ponos.dl  Ponos.dlz  Safe Zone.dl  Safe Zone.dlz  Soteria.dl  Soteria.dlz  Tyche.dl  Tyche.dlz  common.dl  common.dlz  intro.dl  intro.dlz  level1.dl  level1.dlz  level2.dl  level2.dlz  level3.dl  level3.dlz  level4.dl  level4.dlz  start.dl  start.dlz  tutorial.dl  tutorial.dlz
assets/etodd_blender_fbx/: README.md  export_fbx_bin.py  fbx_utils.py
assets/lowpoly/: lowpoly.sfd
assets/lvl/: Bithia Dam.blend  Canal.blend  Channels.blend  Comm Array.blend  Commons.blend  Crossing.blend  Despina.blend  Docks.blend  Euodia.blend  Financial District.blend  In Medias Res.blend  Ioke.blend  Isca.blend  Isthmus.blend  Jael.blend  Library.blend  Media Tower.blend  Medias Res.blend  Merab Tower.blend  Morian Refinery.blend  Moros.blend  Office.blend  Palace of Arts.blend  Pistis.blend  Plaza.blend  Ponos.blend  Port District.blend  Proci.blend  Qualia.blend  Refinery.blend  Safe Zone.blend  Slum.blend  Soteria.blend  Tamar Plaza.blend  Tier 1.blend  Tier 1A.blend  Tier 2.blend  Treatment Plant.blend  Tyche.blend  Tyro.blend  (+33 more)
assets/script/: blend_to_fbx.py  blend_to_lvl.py  text_to_speech.py  ttf_to_fbx.py
assets/shader/: armature.glsl  blit.glsl  blit_depth.glsl  bloom_downsample.glsl  blur.glsl  clouds.glsl  composite.glsl  culled.glsl  cylinder_inside.glsl  downsample.glsl  edge_detect.glsl  flat.glsl  flat_clipped.glsl  flat_instanced.glsl  flat_texture.glsl  flat_texture_offset.glsl  fresnel.glsl  g_buffer_downsample.glsl  global_light.glsl  nav_dots.glsl  particle_alpha.glsl  particle_eased.glsl  particle_limited_size.glsl  particle_rain.glsl  particle_spark.glsl  particle_standard.glsl  particle_textured.glsl  point_light.glsl  scan_lines.glsl  sky_decal.glsl  skybox.glsl  spark_teleport.glsl  spot_light.glsl  ssao.glsl  ssao_blur.glsl  ssao_downsample.glsl  standard.glsl  standard_flat.glsl  stencil_back_faces.glsl  ui.glsl  (+3 more)
assets/str/: README.md  cora.cache  data_fragments_en.json  en.json  it.json  notes_en.json  penelope.cache  soren.cache  text_to_speech  text_to_speech.bat  ui_en.json
assets_workspace/: buildings.blend  skybox_horizon2.xcf
deploy/: dashboard.html  deceivermaster-nginx.conf  deceivermaster.service  deceiversrv1.service  deceiversrv2.service  deceiversrv3.service  deceiversrv4.service  deceiversrv5.service  deceiversrv6.service  deceiversrv7.service  deceiversrv8.service  deploy  lasercrabmaster.service  lasercrabsrv1.service  lasercrabsrv2.service  lasercrabsrv3.service  lasercrabsrv4.service  readme.txt  unit-status-mail.sh  unit-status-mail@.service
pkgconfig/: gl.pc
shaders/: Standard.glsl  StandardShading.vertexshader
ship/: .itch-linux.toml  .itch-mac.toml  .itch-win.toml  Info.plist  app_build_728100.vdf  build-gamejolt.bat  build-linux  build-mac  build-win.bat  build.txt  depot_build_728101.vdf  depot_build_728102.vdf  depot_build_728103.vdf  depot_build_728104.vdf  depot_build_728105.vdf  itch.bat  run-mac-linux  shipme.txt  steam.bat
ship/gamejolt-en/: build.txt
ship/steam-en/: build.txt
src/: ai.cpp  ai.h  ai_worker.cpp  array.h  array.hpp  asset.cpp  asset.cpp.in  asset.h  asset.h.in  common.cpp  common.h  console.cpp  console.h  controls.cpp  controls.h  controls.hpp  ease.h  entity.cpp  entity.h  exec.h  exec.hpp  game.cpp  game.h  http.cpp  http.h  import.cpp  input.cpp  input.h  lmath.cpp  lmath.h  load.cpp  load.h  load.hpp  localization.cpp  loop.h  main.cpp  main.h  model.cpp  model.h  model.hpp  (+27 more)
src/asset/: Wwise_IDs.h  animation.h  armature.h  dialogue.h  font.h  level.h  lookup.h  mesh.h  shader.h  soundbank.h  string.h  texture.h  values.cpp
src/data/: animator.cpp  animator.h  array.h  behavior.cpp  behavior.h  components.cpp  components.h  entity.cpp  entity.h  import_common.cpp  import_common.h  intrusive_list.h  json.cpp  json.h  mesh.cpp  mesh.h  pin_array.h  priority_queue.h  ragdoll.cpp  ragdoll.h  unicode.cpp  unicode.h
src/game/: ai_player.cpp  ai_player.h  audio.cpp  audio.h  awk.cpp  awk.h  component_ids.cpp  constants.h  cora.cpp  cora.h  drone.cpp  drone.h  entities.cpp  entities.h  game.cpp  game.h  master.cpp  master.h  menu.cpp  menu.h  minion.cpp  minion.h  overworld.cpp  overworld.h  parkour.cpp  parkour.h  penelope.cpp  penelope.h  player.cpp  player.h  scripts.cpp  scripts.h  sentinel.cpp  sentinel.h  sudoku.cpp  sudoku.h  team.cpp  team.h  terminal.cpp  terminal.h  (+4 more)
src/platform/: gl.h  glvm.cpp  master.cpp  master_server.cpp  sdl.cpp  server.cpp  sock.cpp  sock.h  util.h  win_mac_linux.cpp
src/render/: armature.cpp  armature.h  glvm.cpp  glvm.h  particles.cpp  particles.h  render.cpp  render.h  skinned_model.cpp  skinned_model.h  ui.cpp  ui.h  view.cpp  view.h  views.cpp  views.h
src/template/: CMakeLists.txt  game.cpp  game.h
workspace/: docks.blend  seven.blend  slum.blend  tier1a.blend  tier2.blend
(+82 files in other folders)
